--- a/README.rdoc
+++ b/README.rdoc
@@ -19,6 +19,5 @@ Rubygems 1.3.2 or greater is required, otherwise it should run everywhere.
 
 == Developing
 
-To add new checks, create a new strategy in lib/gem_lint/strategies, and register
-it in lib/gem_lint.rb. Check other strategies for an idea of the required
-contract.
+To add new checks, create a new strategy in lib/gem_lint/strategies. Check
+other strategies for an idea of the required contract.
