add --detailed switch to lint command
* displays a message explaining the error or warning in further
  detail

--- a/README.rdoc
+++ b/README.rdoc
@@ -12,6 +12,7 @@ personally.
 
   gem install gem-lint
   gem lint somefile-0.0.1.gem
+  gem lint somefile-0.0.1.gem --detailed
 
 === API
 
@@ -45,10 +46,6 @@ specs to ensure all strategies confirm to the contract, so keep the full spec
 suit (using "rake") green.
 
 Full source is on github at https://github.com/yob/gem-lint
-
-== Ideas
-
-* command for users to display extra info on a tag a gem failed
 
 == Further Reading
 
