--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 vXXX ()
 * change output format to be easily machine readable
 * ruby1.9 compat
+* various new checks
 
 v0.0.3 (10th December 2010)
 * use pure ruby to unpack gems
