--- a/README.rdoc
+++ b/README.rdoc
@@ -50,7 +50,7 @@ Full source is on github at https://github.com/yob/gem-lint
 == Ideas for new checks
 
 * look for gems containing DLLs with platform ruby
-* runtime dependencies on hoe? jeweler?
+* runtime dependencies on jeweler
 * improved handling of compiled extensions
 * files entry in spec not matching actual files in data
 
